p3/configs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: argocd-server-ingress
    namespace: argocd
    annotations:
        ingress.kubernetes.io/ssl-redirect: "false"
        nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
        nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
    ingressClassName: traefik
    rules:
        - http:
            paths:
                - path: /
                  pathType: Prefix
                  backend:
                    service:
                        name: argocd-server
                        port:
                            number: 80
